"""
Model
"""

class Model:
    pass
